cloud-native-application/kubernetes/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service1-dr
spec:
  host: service1
  subsets:
  - name: version-1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service2-dr
spec:
  host: service2
  subsets:
  - name: version-1
    labels:
      version: v1
