cloud-native-application/kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-vs
spec:
  hosts:
  - service1
  http:
  - route:
    - destination:
        host: service1
        subset: version-1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-vs
spec:
  hosts:
  - service2
  http:
  - route:
    - destination:
        host: service2
        subset: version-1
